[package]
name = "quicssh-rs-robust"
version = "0.1.6-neo.1"
edition = "2021"
license = "MIT"
authors = [
    "hkatsuma <h.katsumata.2026@gmail.com> (fork maintainer)",
    "oowl <ouyangjun1999@gmail.com> (original author)"
]
description = "A stabilized fork of quicssh-rs - QUIC proxy for SSH with enhanced network compatibility. WARNING: By default, QUIC certificate verification is disabled for ease of use; use at your own risk or enable verification with proper certificates."
repository = "https://github.com/hkatsuma/quicssh-rs-robust"
homepage = "https://github.com/hkatsuma/quicssh-rs-robust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "quicssh-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
#quinn = "0.10.2"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.2"
#rustls = { version = "0.21.12", features = ["quic","dangerous_configuration"] }
#rustls-pemfile = "2.1.3"
#rcgen = "0.12.1"
log = { version = "0.4.27", features = ["std", "serde"] }
log4rs = "1.2.0"
serde = "1.0.219"
toml = "0.8.19"

quinn          = "^0.11"
rustls         = "^0.23"
rcgen          = "^0.13"
rustls-pemfile = "^2"

[package.metadata.deb]
extended-description = """\
:) quicssh-rs-robust is a QUIC proxy that allows to use QUIC to connect to an SSH server without needing to patch the client or the server. This is a stabilized fork focused on robustness for production use."""
section = "net"
priority = "optional"
suggests = "openssh-server"
